--- a/manuscript_initial.tex
+++ b/manuscript_initial.tex
@@ -274,7 +274,7 @@ Same as above \cite{Bonham2016}, except using MeSH term "Computational Biology".
 Subset of author and gender data from Filardo et.al \cite{Filardo2016}. This dataset did not contain author first names or unique publication identifiers. We searched pubmed for the title, author and publication date, and were able to identify 2155/3153 publications to analyze. Publications with no matching search results or with multiple matching search results were excluded.
 
 \subsubsection*{arXiv Quantitative Biology (q-bio)}
-This dataset \cite{Bonham2016a} contains all preprints with the label “q-bio” from 2003 (when the section was introduced) to 2014. Downloaded on 10 June, 2016.
+This dataset \cite{Bonham2016a} contains all preprints with the label “q\-bio” from 2003 (when the section was introduced) to 2014. Downloaded on 10 June, 2016.
 
 \subsubsection*{arXiv CS (cs)}
 This dataset \cite{Bonham2016a} contains all preprints with the label “cs” from 2003 to 2014. Downloaded on 10 June, 2016.
